[package]
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"
name = "fetch"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
image = "0.23"
log = "0.4"
reqwest = "0.10.10"
scraper = "0.12.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "*"
walkdir = "*"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "0.2"
